# swiftlint-bazel-example

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  file.swift
swiftlint_extra_rules/: BUILD  ExtraRules.swift  ForbiddenVarRule.swift
